# Rstar_tree_Database

./: CMakeLists.txt  Database_Technology_Project  Database_Technology_Project.cpp  Entity.cpp  IndexFileUtilities.cpp  IndexfileUtilities.cpp  Node.cpp  Point.cpp  README.md  R_tree_structure  R_tree_structure.cpp  Record.cpp  Rectangle.cpp  datafile.txt  output  plot.py  start  start.cpp  statisticsKNN.txt  statisticsRange.txt
